ref-fc19-acer-c7/test-rebuild-kernel/kernel-configs-ref/warning-gcc

  CC      kernel/rcutree.o
kernel/rcutree.c: In function ‘rcu_init_one’:
kernel/rcutree.c:2946:13: error: array subscript is above array bounds [-Werror=array-bounds]
   rsp->level[i] = rsp->level[i - 1] + rsp->levelcnt[i - 1];
             ^
cc1: all warnings being treated as errors
make[1]: *** [kernel/rcutree.o] Error 1
make: *** [kernel] Error 2
Sat Sep  7 21:06:16 PDT 2013

  gcc -Wp,-MD,kernel/.rcutree.o.d  
        -nostdinc -isystem 
        /usr/lib/gcc/i686-redhat-linux/4.8.1/include 
        -I/home/vser/cr-proj/kern38/chromeos-kernel-3-8-work/chromeos-kernel-3-8/arch/x86/include 
        -Iarch/x86/include/generated  -Iinclude 
        -I/home/vser/cr-proj/kern38/chromeos-kernel-3-8-work/chromeos-kernel-3-8/arch/x86/include/uapi 
        -Iarch/x86/include/generated/uapi 
        -I/home/vser/cr-proj/kern38/chromeos-kernel-3-8-work/chromeos-kernel-3-8/include/uapi 
        -Iinclude/generated/uapi 
        -include /home/vser/cr-proj/kern38/chromeos-kernel-3-8-work/chromeos-kernel-3-8/include/linux/kconfig.h 
        -D__KERNEL__ 
        -Wall -Wundef -Wstrict-prototypes -Wno-trigraphs -fno-strict-aliasing 
        -fno-common -Werror-implicit-function-declaration -Wno-format-security 
        -fno-delete-null-pointer-checks 
        -Os 
        -Wno-maybe-uninitialized 
        -m32 -msoft-float -mregparm=3 -freg-struct-return -fno-pic 
        -mpreferred-stack-boundary=2 -march=i686 -Wa,-mtune=generic32 
        -ffreestanding -fstack-protector-strong 
        -DCONFIG_AS_CFI=1 -DCONFIG_AS_CFI_SIGNAL_FRAME=1 -DCONFIG_AS_CFI_SECTIONS=1 
        -DCONFIG_AS_AVX=1 -DCONFIG_AS_AVX2=1 
        -pipe 
        -Wno-sign-compare 
        -fno-asynchronous-unwind-tables -mno-sse -mno-mmx -mno-sse2 -mno-3dnow 
        -mno-avx -Wframe-larger-than=2048 -Wno-unused-but-set-variable 
        -fno-omit-frame-pointer -fno-optimize-sibling-calls 
        -g -pg 
        -Werror -Wdeclaration-after-statement -Wno-pointer-sign 
        -fno-strict-overflow -fconserve-stack 
        -DCC_HAVE_ASM_GOTO    -D"KBUILD_STR(s)=#s" 
        -D"KBUILD_BASENAME=KBUILD_STR(rcutree)"  
        -D"KBUILD_MODNAME=KBUILD_STR(rcutree)" 
        -c 
        -o kernel/rcutree.o kernel/rcutree.c

